fix image stretching

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -1,6 +1,6 @@
 .image {
     width: 50%;
-    height: auto;
+    height: 50%;
     margin-right: 20px;
 }
 
